test/corpus/comments.txt
================================================================================
Short comments
================================================================================

-- a comment
--
-- a comment, right after an empty comment

---

(program
  (comment)
  (comment)
  (comment))

================================================================================
GLua comments
================================================================================

// hello
// 
// HELLO!!

---

(program
  (comment)
  (comment)
  (comment))

================================================================================
Long comments
================================================================================

--[[
print("a comment")
]]

--[[
print("a comment")
--]]

-- [[
print("a string between two comments")
--]]

-- [[
print([[
a string between two comments
]])
--]]

---

(program
  (comment)

  (comment)

  (comment)
  (function_call
    (identifier)
    (arguments
      (string)))
  (comment)

  (comment)
  (function_call
    (identifier)
    (arguments
      (string)))
  (comment))

================================================================================
Long comments (with levels)
================================================================================

--[==[
print("a comment")
]==]

--[===[
print("a comment")
--]===]

-- [==[
print("a string between two comments")
--]==]

-- [=[
print([[
a string between two comments
]])
--]=]

---

(program
  (comment)

  (comment)

  (comment)
  (function_call
    (identifier)
    (arguments
      (string)))
  (comment)

  (comment)
  (function_call
    (identifier)
    (arguments
      (string)))
  (comment))
