test/corpus/expressions.txt
============================================
Numeric constants
============================================

3
345
0xff
0xBEBADA
3.0
3.1416
314.16e-2
0.31416E1
34e1
0x0.1E
0xA23p-4
0X1.921FB54442D18P+1

---

(program
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number))
  (expression (number)))

================================================================================
Short strings
================================================================================

print('')
print("")
print('a single-quoted (\') string')
print("a double-quoted (\") string")
print("a string with -- an undetected comment")

---

(program
  (function_call
    (identifier)
    (arguments
      (string)))
  (function_call
    (identifier)
    (arguments
      (string)))
  (function_call
    (identifier)
    (arguments
      (string)))
  (function_call
    (identifier)
    (arguments
      (string)))
  (function_call
    (identifier)
    (arguments
      (string))))

================================================================================
Long strings
================================================================================

print([[
a string
]])

print([[
a string with
-- an undetected comment
]])

print([==[
a string with
[[ an undetected string ]]
]==])

---

(program
  (function_call
    (identifier)
    (arguments
      (string)))

  (function_call
    (identifier)
    (arguments
      (string)))

  (function_call
    (identifier)
    (arguments
      (string))))

============================================
Binary operations
============================================

a = i + j * 3 - j % 5

b = k + v % 5 ^ 2

c = i * 2 ^ j

---

(program
  (variable_declaration (variable_declarator (identifier))
    (binary_operation
      (binary_operation (identifier)
        (binary_operation (identifier) (number)))
      (binary_operation (identifier) (number))))

  (variable_declaration (variable_declarator (identifier))
    (binary_operation (identifier)
      (binary_operation (identifier)
        (binary_operation (number) (number)))))

  (variable_declaration (variable_declarator (identifier))
    (binary_operation (identifier)
      (binary_operation (number) (identifier)))))

============================================
Unary GLua operations
============================================

food_table_size = #food

negative_value = -value

tern_bool = !condition && true || false

---

(program
  (variable_declaration (variable_declarator (identifier))
    (unary_operation (identifier)))

  (variable_declaration (variable_declarator (identifier))
    (unary_operation (identifier)))

  (variable_declaration (variable_declarator (identifier))
    (binary_operation
      (binary_operation
        (unary_operation (identifier)) (true))
      (false))))

============================================
Tables
============================================

food = {
  ["favorites"] = {
    ['pizza'] = true,
    hotdog = false
  }
}

local games = {
  favorites = {
    { 'the witcher', "world of warcraft", 'dragon age', "mass effect" }
  }
}

---

(program
  (variable_declaration (variable_declarator (identifier))
    (table
      (field (string)
        (table
          (field (string) (true))
          (field (identifier) (false))))))

  (local_variable_declaration (variable_declarator (identifier))
    (table
      (field (identifier)
        (table
          (field
            (table
              (field (string))
              (field (string))
              (field (string))
              (field (string)))))))))
